update project structure

--- a/src/modules/LandingReadme.astro
+++ b/src/modules/LandingReadme.astro
@@ -36,7 +36,7 @@ import { SITE_TITLE } from '../app/constants.js';
 				<br />meet <a
 					rel="noopener nofollow"
 					href="https://flowbite.com"
-					class="font-bold text-blue-600 dark:text-blue-500 no-underline"
+					class="font-bold text-primary-600 dark:text-primary-500 no-underline"
 					>Flowbite</a
 				>!
 			</p>
@@ -45,7 +45,7 @@ import { SITE_TITLE } from '../app/constants.js';
 				<Confettis>
 					<button
 						type="button"
-						class="text-blue-800 hover:text-white border border-blue-700 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-100 dark:hover:text-white dark:hover:bg-blue-600 dark:focus:ring-blue-800"
+						class="text-primary-800 hover:text-white border border-primary-700 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-primary-500 dark:text-primary-100 dark:hover:text-white dark:hover:bg-primary-600 dark:focus:ring-primary-800"
 						>Click me!</button
 					>
 				</Confettis>
