--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import LayoutSidebar from '../app/LayoutSidebar.astro';
-import LandingReadme from '../modules/LandingReadme.astro';
+import LayoutStacked from '../app/LayoutStacked.astro';
+import MenuCategories from '../modules/MenuCategories.astro';
 ---
 
-<LayoutSidebar>
-	<LandingReadme />
-</LayoutSidebar>
+<LayoutStacked>
+	<MenuCategories />
+</LayoutStacked>
