FastAPI Project Structure

--- a/src/app/LayoutCommon.astro
+++ b/src/app/LayoutCommon.astro
@@ -58,7 +58,7 @@ const { class: clazz } = Astro.props;
 
 <script>
 	import 'flowbite';
-	import 'flowbite/dist/datepicker.js';
+	// import 'flowbite/dist/datepicker.js';
 </script>
 
 <style is:global>
